SIRA Access Manager advanced
 - a.k.a. the "Rules Engine"
 - added the capability to express complex conditions to be dynamically evaluated at runtime with SpEL
 - having authenticated user informations (i.e.: InfoPersona) as implicit evaluation context for dynamic evaluations
 - dynamic evaluated complex expressions are available at various levels of Rule configuration, namely:
  - rule access mode
  - rule filter
  - rule hidden attributes
   - this configuration element has been greatly enhanced, offering the possibility to express a tree of complex, dynamically evaluated, conditions to select which attributes to hide
   - the expression tree is modeled after XSLT choose-when-otherwise construct
   - the possibility to express a simple list of attributes to hide as been preserved, for backward compatibility
 - with unit-tests
  - the test-coverage is quite high, hovering around 75%. Nevertheless, a much-needed thoroughly test session may obviously still pinpoint bugs and/or "stinky" implementations, with respect to the profound changes made
 - other minor changes
  - ensure that authentication principal is NOT forced to its string representation
  - ensure that all authentication credentials got erased as soon as possible after a successful authentication attempt